# lyTUI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  app2.py  app3.py  counter.py  main.py  pyproject.toml  requirements.txt
audio/: MusicLoader.py  lyrics.py  player.py
lyTUIv2/: app.py  player.py  song1.m4a
lyTUIv2/audio/: MusicLoader.py  audio.py
lyTUIv2/messages/: LibrarySelection.py  MusicSelection.py
lyTUIv2/models/: tracks.py
lyTUIv2/services/: ansi_converter.py
lyTUIv2/widgets/: MusicPanel.py  ResultsPanel.py  lyrics_view.py  musicViews.py  option.py
messages/: AudioDeviceSelected.py
music/: text 4.txt
services/: ansi_converter.py  get_metadata.py
ui/: lyrics_view.py  playlist.py
widgets/: AudioDeviceModal.py  MusicPanel.py  lyHeader.py  lyrics_view.py  option.py
