[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyTUI"
version = "0.1.0"
description = "A Terminal User Interface music player with synchronized lyrics"
authors = [
    {name = "Cesar Paysayo", email = "your.email@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "textual",
    "pygame",
    "mutagen",
]

[project.urls]
Homepage = "https://github.com/yourusername/lyTUI"
Repository = "https://github.com/yourusername/lyTUI.git"
Issues = "https://github.com/yourusername/lyTUI/issues"

[tool.setuptools]
packages = ["audio", "ui"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"